--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       </ul>
     </nav>
   </header>
-
-  
+  <main style="padding: 20px;">
+        <h2>Bienvenido</h2>
+        <p>Explora el fascinante mundo de las computadoras. Aprende sobre su historia, tipos y componentes.</p>
+        <p>Los equipos de computación han recorrido un largo camino desde sus inicios en el siglo XX.</p>
+        <p>Gracias al avance tecnológico, hoy contamos con dispositivos inteligentes.</p>
+    </main>
 </body>
 </html>
