--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
         <p>Los equipos de computación han recorrido un largo camino desde sus inicios en el siglo XX.</p>
         <p>Gracias al avance tecnológico, hoy contamos con dispositivos inteligentes.</p>
     </main>
+
+<section style="text-align: center; padding: 20px;">
+    <h3>REPRESENTACIÓN GRÁFICA DE LA EVOLUCIÓN DE LAS COMPUTADORAS</h3>
+    <img src="/imagenes/maxresdefault.jpg" alt="Evolución de computadoras" width="1000">
+</section>
 </body>
 </html>
