--- a/index.html
+++ b/index.html
@@ -37,5 +37,42 @@
         frameborder="0" allowfullscreen>
     </iframe>
 </section>
+<section style="padding: 20px;">
+    <h3 style="text-align: center;">COMPARATIVAS ENTRE COMPUTADORAS DE DISTINTAS DÉCADAS</h3>
+    <table border="1" cellspacing="0" cellpadding="10" style="width: 100%; text-align: center;">
+        <thead style="background-color: #f0f0f0;">
+            <tr>
+                <th>Década</th>
+                <th>Procesador</th>
+                <th>Memoria RAM</th>
+                <th>Almacenamiento</th>
+                <th>Sistema Operativo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1980</td>
+                <td>Intel 8086</td>
+                <td>256 KB</td>
+                <td>Disquete (360 KB)</td>
+                <td>MS-DOS</td>
+            </tr>
+            <tr>
+                <td>2000</td>
+                <td>Pentium III</td>
+                <td>128 MB</td>
+                <td>HDD 10 GB</td>
+                <td>Windows XP</td>
+            </tr>
+            <tr>
+                <td>2024</td>
+                <td>Intel i7 13th Gen</td>
+                <td>16 GB</td>
+                <td>SSD 1 TB</td>
+                <td>Windows 11 / Linux</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
 </body>
 </html>
