--- a/historia.html
+++ b/historia.html
@@ -17,5 +17,11 @@
             </ul>
         </nav>
     </header>
+<main style="padding: 20px;">
+    <h2>La evolución de las computadoras</h2>
+    <p>Desde los años 40, las computadoras han cambiado drásticamente. Pasaron de ocupar salas completas a caber en la palma de la mano.</p>
+    <p>La historia de las computadoras se divide en generaciones que muestran el avance tecnológico de los circuitos y la miniaturización de los componentes.</p>
+    <p>En esta sección conocerás una línea de tiempo de cómo fueron evolucionando hasta llegar a las modernas PC, laptops y dispositivos móviles.</p>
+</main>
 </body>
 </html>
