--- a/historia.html
+++ b/historia.html
@@ -23,5 +23,39 @@
     <p>La historia de las computadoras se divide en generaciones que muestran el avance tecnológico de los circuitos y la miniaturización de los componentes.</p>
     <p>En esta sección conocerás una línea de tiempo de cómo fueron evolucionando hasta llegar a las modernas PC, laptops y dispositivos móviles.</p>
 </main>
+<br>
+<section style="padding: 20px;">
+    <h3 style="text-align: center;">Línea de tiempo</h3>
+    <table border="1" cellspacing="0" cellpadding="10" style="width: 100%; text-align: center;">
+        <thead style="background-color: #f0f0f0;">
+            <tr>
+                <th>Año</th>
+                <th>Evento</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1940</td>
+                <td>Primera generación: tubos al vacío</td>
+            </tr>
+            <tr>
+                <td>1958</td>
+                <td>Segunda generación: transistores</td>
+            </tr>
+            <tr>
+                <td>1964</td>
+                <td>Tercera generación: circuitos integrados</td>
+            </tr>
+            <tr>
+                <td>1971</td>
+                <td>Cuarta generación: microprocesadores</td>
+            </tr>
+            <tr>
+                <td>2020+</td>
+                <td>Quinta generación: inteligencia artificial</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
 </body>
 </html>
