--- a/tipos.html
+++ b/tipos.html
@@ -5,7 +5,7 @@
     <title>Tipos de Computadoras</title>
 </head>
 <body>
-    <header style="background-color: #d82332; color: white; padding: 10px; text-align: center;">
+    <header style="background-color: #e944d6; color: white; padding: 10px; text-align: center;">
         <img src="imagenes/logo-sen.png" alt="Logo SENA" height="60"><br>
         <h1>Mundo de las Computadoras</h1>
         <nav>
