--- a/tipos.html
+++ b/tipos.html
@@ -17,5 +17,10 @@
             </ul>
         </nav>
     </header>
+<main style="padding: 20px;">
+    <h2>Clasificación</h2>
+    <p>Las computadoras se clasifican en varios tipos, de acuerdo con su capacidad de procesamiento, tamaño y uso.</p>
+    <p>A continuación se presenta una tabla con los principales tipos de computadoras junto con sus características e imágenes.</p>
+</main>
 </body>
 </html>
